# rustnl-2024

./: README.md  absolution.js  custom.css  index.html  index.md
eg/: Cargo.toml
eg/src/: execute.rs  grammar.rs  lib.rs  main.rs  test.rs  type_system.rs
eg/src/grammar/: cast_impls.rs
eg/src/test/: talk_examples.rs
eg/src/type_system/: env.rs  type_expr.rs
images/: Piglet-sad.pxm  Piglet.pxm  Winnie-the-Pooh.pxm
