[package]
name = "eg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
fn-error-context = "0.2.1"
formality-core = "0.1.1"
tracing = "0.1.40"

[patch.crates-io]
formality-core = { git = "https://github.com/nikomatsakis/a-mir-formality-ndm.git" }
formality-macros = { git = "https://github.com/nikomatsakis/a-mir-formality-ndm.git" }

